--- a/main.tex
+++ b/main.tex
@@ -1,36 +1,54 @@
-\documentclass{article}
+\documentclass{book}
 \usepackage{anyfontsize}
-\usepackage[letterpaper, margin=.5in]{geometry}
-\usepackage[dvipsnames*, svgnames]{xcolor}
+\usepackage{fancyhdr}
+\usepackage[papersize={9in, 11in}, margin=.75in]{geometry}
+\usepackage[dvipsnames, svgnames]{xcolor}
 \usepackage{pagecolor}
 \usepackage{titlesec}
 \usepackage{tikz}
-%\usepackage{vcell}
+\usepackage{background}
+
 \input{functions.tex}
 
-
-\pagenumbering{gobble}
-
-\newcommand{\roundpic}[4][]{
-  \tikz\node [circle, minimum width = #2,
-    path picture = {
-      \node [#1] at (path picture bounding box.center) {
-        \includegraphics[width=#3]{#4}};
-    }] {};}
-
+\fancyhf{}
+\renewcommand{\headrulewidth}{0pt}
+\pagenumbering{arabic}
 
 \begin{document}\fontsize{12}{12}\selectfont
-{\begin{center}\fontsize{48}{48}\selectfont
-\textcolor{white}{\textbf{Meet the Authors}}
-\end{center}}
-\vspace{.75in}
+\pagenumbering{gobble}
+\pagecolor{brown}
 
+\backgroundsetup{
+scale=1,
+angle=0,
+opacity=2,  %% adjust
+contents={\includegraphics[width=\paperwidth,height=\paperheight]{images/cover.jpg}}
+}
+\begin{titlepage}
+{\fontsize{1}{1}\selectfont blank text}
+\end{titlepage}
+\vfill
+\newpage
+
+\backgroundsetup{
+scale=1,
+angle=0,
+opacity=0,
+contents={}
+%\includegraphics[width=\textwidth]{Cover-Image.png}
+}
+
+\pagenumbering{arabic}
+\pagestyle{fancy}
+\fancyhead[LO, RE]{\fontsize{20}{20}\selectfont\thepage}
+%\fancyhead[EL]{\fontsize{20}{20}\selectfont\thepage}
 \pagecolor{red!0!green!25!blue!50}
-%\roundpic{4cm}{4cm}{headshot.jpg}} & \centered{\fontsize{16}{16}\selectfont Hi}\\
-\bioEntry{headshot.jpg}{PANCAKES}\vspace{1cm}\noindent
-\bioEntry{headshot.jpg}{PANCAKES}\vspace{1cm}\noindent
-\bioEntry{headshot.jpg}{PANCAKES}%\\\\\vspace{2cm}\noindent
 
-hi
+\include{authors.tex}
+
+\pagecolor{Apricot}
+{\begin{center}\fontsize{48}{48}\selectfont
+\textcolor{Sepia}{\textbf{Peanut Butter and Jelly Sandwiches}}
+\end{center}}
 
 \end{document}
