--- a/main.tex
+++ b/main.tex
@@ -1,18 +1,20 @@
 \documentclass{book}
 \usepackage{anyfontsize}
 \usepackage{fancyhdr}
-\usepackage[papersize={9in, 11in}, margin=.75in]{geometry}
+\usepackage[papersize={9in, 11in}, margin=.6in]{geometry}
 \usepackage[dvipsnames, svgnames]{xcolor}
+\usepackage{multicol}
 \usepackage{pagecolor}
 \usepackage{titlesec}
 \usepackage{tikz}
 \usepackage{background}
 
 \input{functions.tex}
+\renewcommand{\headrulewidth}{0pt}
 
 \fancyhf{}
-\renewcommand{\headrulewidth}{0pt}
 \pagenumbering{arabic}
+\titleformat{\section}{\fontsize{22}{22}\selectfont\bfseries}{}{0em}{}
 
 \begin{document}\fontsize{12}{12}\selectfont
 \pagenumbering{gobble}
@@ -48,7 +50,50 @@ contents={}
 
 \pagecolor{Apricot}
 {\begin{center}\fontsize{48}{48}\selectfont
-\textcolor{Sepia}{\textbf{Peanut Butter and Jelly Sandwiches}}
+\textcolor{Bittersweet}{\textbf{Peanut Butter and Jelly Sandwiches}}
 \end{center}}
+
+\begin{center}
+\vspace{.25in}
+\includegraphics[height=1.5in]{images/pbj.jpg}
+\end{center}
+
+\textcolor{Sepia}{\section{Ingredients}}\fontsize{12}{12}\selectfont
+\begin{multicols}{2}
+\begin{enumerate}
+\item Peanut butter
+\item Jelly
+\item 2 slices of bread
+\item INGREDIENT
+\item INGREDIENT
+\item INGREDIENT
+\item INGREDIENT
+\item INGREDIENT
+\item INGREDIENT
+\\
+\end{enumerate}
+\end{multicols}
+
+\textcolor{Sepia}{\section{Instructions}}\fontsize{12}{12}\selectfont
+\begin{multicols}{2}
+\begin{enumerate}
+\item Put the peanut butter on a slice of bread
+\item Put the jelly on the piece of bread
+\item Put the 2 bread slices together
+\item INSTRUCTIONS
+\item INSTRUCTIONS
+\item INSTRUCTIONS
+\item INSTRUCTIONS
+\item INSTRUCTIONS
+\item INSTRUCTIONS
+\\
+\end{enumerate}
+\end{multicols}
+
+\textcolor{Sepia}{\section{Cultural Context}}\fontsize{14}{14}\selectfont
+\noindent
+Peanut Butter and Jelly Sandwiches are an essential part of any traditional suburban American household.
+While strawberry jelly is preferred because it is better, one could also use grape.
+\\
 
 \end{document}
