updated recipe structure

--- a/authors.tex
+++ b/authors.tex
@@ -1,3 +1,4 @@
+\pagecolor{red!0!green!25!blue!50}
 {\begin{center}\fontsize{48}{48}\selectfont
 \textcolor{white}{\textbf{Meet the Authors}}
 \end{center}}
